--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
   "name": "repo-finder",
+  "homepage": "http://kanapki.github.io/repo-finder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@octokit/rest": "^18.6.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "dotenv": "^10.0.0",
+    "multiselect-react-dropdown": "^2.0.4",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.0.0-rc2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "slim-select": "^1.27.0",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
